# planet-emu

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  app.py  go.mod  main.py  package-lock.json  package.json  pyproject.toml  requirements-lambda.txt  requirements.txt  setup.py
.github/workflows/: aws-deploy.yml  gh-pages.yml  python-package.yml
charts/: api.yaml  database.yaml  ingress.yaml  issuer.yaml  redis.yaml  static.yaml  volume.yaml  worker.yaml
data/csv/: dnn_model_history.csv  features.csv  (+6 more)
earth-engine/: .gitignore  main.py  pyproject.toml
earth-engine/src/: __init__.py  grid.py  image.py
planet_emu/: features.py  gee.py  grid_sample.py  image.py  plot.py  predict.py  soil.py  stack.py  util.py
public/: index.html
python/: .dockerignore  Dockerfile  app.py  deploy.sh  main.py  requirements-test.txt  requirements.txt  service_account.json.gpg
scripts/: decrypt_secret.sh  extract.py  get_model.py  get_ndvi.py  get_soil.py  get_soil_counties.py  get_soil_summary.py  get_weather.py  pbf.sh  soil_properties.py  stats.py  tiles.sh  train.py  transform.py
src/: App.css  App.js  ButtonAppBar.js  Example.js  Header.js  LineGraph.js  MapBox.css  MapBox.js  Selection.js  cdk_stack.py  dataset.py  earth.py  geojson.py  grid.py  grid_sample.py  index.js  model.py  reduce.py  theme.js
svelte/: Dockerfile  deploy.sh  gh-pages.js  package-lock.json  package.json  svelte.config.js
templates/: index.html
tests/: cdk_stack_test.py  earth_test.py  fast_api_test.py  grid_sample_test.py  test_cdk_stack.py
ui/: package.json  pnpm-lock.yaml
(+172 files in other folders)
