[tool.poetry]
name = "planet-emu"
version = "0.1.0"
description = ""
authors = ["Danny O'Brien <danmcfan33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
earthengine-api = "^0.1.413"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
